# suncast

./: .coverage  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: suncast.env.example  suncast.service
docs/superpowers/plans/: 2026-07-03-suncast-mvp.md  2026-07-05-suncast-backtest.md
docs/superpowers/results/: 2026-07-05-backtest.md
docs/superpowers/specs/: 2026-07-02-suncast-design.md  2026-07-05-suncast-backtest-design.md
suncast/: app.py  backfill.py  backtest.py  calibrate.py  config.py  geocode.py  influx.py  jobs.py  pvmodel.py  store.py
suncast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
suncast/providers/: forecast_solar.py  open_meteo.py
suncast/static/: app.js  style.css
suncast/templates/: history.html  index.html
tests/: test_api.py  test_backfill.py  test_backtest.py  test_calibrate.py  test_config.py  test_forecast_solar_client.py  test_forecast_solar_parse.py  test_geocode.py  test_influx.py  test_jobs.py  test_models.py  test_open_meteo.py  test_pages.py  test_pvmodel.py  test_store.py
tests/fixtures/: forecast_solar_ok.json
