[project]
name = "suncast"
version = "0.2.0"
description = "Camper solar forecast with self-calibration (buspi)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["fastapi>=0.115", "uvicorn>=0.30", "jinja2>=3.1", "httpx>=0.27", "influxdb-client>=1.44"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.scripts]
suncast = "suncast.app:main"

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["suncast*"]

[tool.setuptools.package-data]
suncast = [
  "templates/*.html",
  "static/*.js",
  "static/*.css",
  "static/vendor/leaflet/*.js",
  "static/vendor/leaflet/*.css",
  "static/vendor/leaflet/images/*",
]
